--- a/application/theme/css/style.css
+++ b/application/theme/css/style.css
@@ -3970,3 +3970,27 @@ box-shadow: 0px 0px 0px #ddd;
 	-moz-box-shadow: 0px 0px 0px #ddd; 
 	-webkit-box-shadow: 0px 0px 0px #ddd;  
 }
+#filter_link
+{
+	font-family:"Arial", Helvetica, sans-serif;
+	font-size:11px;
+	color:#444;
+	padding:0px 14px 0px 14px;
+	line-height:23px;
+	margin-top:10px;
+	
+}
+
+#filter_link a
+{
+	text-decoration:none;
+	color:#4795DF;
+	
+}
+
+#filter_link a:hover
+{
+	text-decoration:underline;
+	color:#4795DF;
+	
+}
