--- a/application/theme/css/style.css
+++ b/application/theme/css/style.css
@@ -4001,3 +4001,193 @@ body
     -webkit-box-shadow: 0 0 5px white,inset 0px 1px 2px #666;
     -moz-box-shadow: 0 0 5px #fff, inset 0px 1px 2px #666;
 }
+
+
+#location_header
+{
+
+    font-family:"Arial", Helvetica, sans-serif;
+    color:#4795DF;
+    font-size:16px;
+    font-weight:bold;
+    margin-top:35px;
+    width:520px;
+    margin-bottom:5px;
+    line-height:33px;
+    -webkit-font-smoothing: antialiased;
+    float:left;
+
+}
+
+#location_header a
+{
+    text-decoration:none;
+    color:#4795DF;
+
+}
+
+
+#location_header a:hover
+{
+
+    text-decoration:underline;
+    color:#4795DF;
+
+}
+
+
+#location_sepline2
+{
+
+    border-top:2px #ccc	solid;
+    margin-top:0px;
+    width:915px;
+
+
+
+}
+
+#location_sepline3
+{
+
+    border-top:1px #fff	solid;
+    margin-top:0px;
+    margin-bottom:10px;
+    width:915px;
+
+
+
+}
+
+#locations_container
+{
+    float:left;
+    width:235px;
+    margin-top:0px;
+
+}
+
+#locations_location4
+{
+
+
+    font-family:"Arial", Helvetica, sans-serif;
+    color:#555;
+    font-size:18px;
+    font-weight:bold;
+    -webkit-font-smoothing: antialiased;
+    margin-top:5px;
+    width:210px;
+
+
+
+
+}
+
+#locations_location4 a
+{
+    display:block;
+    background-color:#e9e9e9;
+
+
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px 6px 6px 6px;
+    border-radius:6px;
+    padding:3px 3px 3px 8px;
+    color:#555;
+    text-decoration:none;
+    transition: all 0.09s ease-in-out;
+    -webkit-transition: all 0.09s ease-in-out;
+    -moz-transition: all 0.09s ease-in-out;
+
+
+
+}
+
+#locations_location4 a:hover
+{
+    color:#333;
+    background-color:#d9d9d9;
+
+}
+
+
+
+#locations_location
+{
+
+
+    font-family:"Arial", Helvetica, sans-serif;
+    color:#666;
+    font-size:12px;
+
+    margin-top:5px;
+    width:210px;
+
+
+
+
+}
+
+
+
+#locations_location a
+{
+    display:block;
+    background-color:#e9e9e9;
+
+
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px 6px 6px 6px;
+    border-radius:6px;
+    padding:3px 3px 3px 8px;
+    color:#666;
+    text-decoration:none;
+
+
+
+}
+
+#locations_location a:hover
+{
+    color:#333;
+    background-color:#d9d9d9;
+
+}
+
+
+
+#locations_letters
+{
+
+    font-family:"Arial", Helvetica, sans-serif;
+
+    font-size:16px;
+    font-weight:bold;
+    margin-top:15px;
+    width:250px;
+    margin-bottom:0px;
+    line-height:25px;
+
+}
+
+
+#locations_letters a
+{
+    text-decoration:none;
+    color:#555;
+
+
+}
+
+
+
+#locations_letters a:hover
+{
+    text-decoration:none;
+    color:#4795DF;
+
+
+}
